@@ -1,21 +1,9 @@
 plugins {
     id 'java'
     id 'idea'
-    id 'nu.studer.jooq' version '5.2.1'
-    id "org.flywaydb.flyway" version "7.8.2"
-//    id 'jacoco' // HERE!
+    id 'nu.studer.jooq'
+    id "org.flywaydb.flyway"
 }
-
-java {
-    sourceCompatibility = JavaVersion.VERSION_16
-    targetCompatibility = JavaVersion.VERSION_16
-
-    // has issues with preview-features
-//    toolchain {
-//        languageVersion = JavaLanguageVersion.of(15)
-//    }
-}
-
 
 group 'com.marketplace'
 version '1.0.0-SNAPSHOT'
@@ -116,8 +104,8 @@ dependencies {
     testImplementation("org.mockito:mockito-junit-jupiter:${mockitoVersion}")
 
     functionalImplementation("org.spockframework:spock-core:1.3-groovy-2.5")
-
 }
+
 
 test {
     useJUnitPlatform()
@@ -134,18 +122,6 @@ tasks.withType(Test) {
 }
 tasks.withType(JavaExec) {
     jvmArgs += "--enable-preview"
-}
-
-allprojects {
-    tasks.withType(JavaCompile) {
-        options.compilerArgs += "--enable-preview"
-    }
-    tasks.withType(Test) {
-        jvmArgs += "--enable-preview"
-    }
-    tasks.withType(JavaExec) {
-        jvmArgs += "--enable-preview"
-    }
 }
 
 task integrationTest(type: Test) {
@@ -173,19 +149,6 @@ functionalTest {
 
 check.dependsOn integrationTest
 
-subprojects {
-    repositories {
-        mavenLocal()
-        mavenCentral()
-    }
-
-    processIntegrationResources {
-        duplicatesStrategy = DuplicatesStrategy.INCLUDE
-    }
-    processFunctionalResources {
-        duplicatesStrategy = DuplicatesStrategy.INCLUDE
-    }
-}
 processIntegrationResources {
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
